# hexlet-django-blog

./: db.sqlite3  pyproject.toml
hexlet_django_blog/: settings.py  urls.py  views.py
hexlet_django_blog/article/: admin.py  forms.py  models.py  urls.py  views.py  views.py'
hexlet_django_blog/article/migrations/: 0001_initial.py
hexlet_django_blog/templates/: about.html  base.html  index.html
hexlet_django_blog/templates/articles/: create.html  index.html  index.html'  update.html
